# mt4-regex

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  mt4-regex-test.cpp  mt4-regex.cpp  mt4-regex.hpp  test.hpp
MQL4/Include/: regex.mqh
